tests/rosetta/out/Fortran/anti-primes.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program anti_primes
  implicit none
    integer :: count
    integer :: i
    integer :: maxDiv
    character(len=100) :: line
      integer :: d
        character(len=100) :: s0
  call main()
  
  contains
  recursive integer function countDivisors(n) result(res)
    integer, intent(in) :: n
    if ((n < 2)) then
      res = 1
      return
    end if
    count = 2
    i = 2
    do while (((i <= n) / 2))
      if ((mod(n,i) == 0)) then
        count = (count + 1)
      end if
      i = (i + 1)
    end do
    res = count
    return
  end function countDivisors
  recursive subroutine main()
    print *, 'The first 20 anti-primes are:'
    maxDiv = 0
    count = 0
    n = 1
    line = ''
    do while ((count < 20))
      d = countDivisors(n)
      if ((d > maxDiv)) then
        write(s0,'(G0)') n
        line = (line + s0) // ' '
        maxDiv = d
        count = (count + 1)
      end if
      n = (n + 1)
    end do
    line = line(0+1:(size(line) - 1))
    print *, line
  end subroutine main
end program anti_primes
